--- a/src/assets/views-experiment/user/profile.html
+++ b/src/assets/views-experiment/user/profile.html
@@ -10,7 +10,7 @@
   <meta charset="UTF-8">
   <title>User Login</title>
   <link href="../../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="../../css/styles.css" rel="stylesheet"/>
+  <link href="../../views/css/styles.css" rel="stylesheet"/>
 
   <!-- STYLE sheet comes after all the libraries are loaded. Document style-->
 
