--- a/src/assets/views-experiment/website/website-edit.html
+++ b/src/assets/views-experiment/website/website-edit.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet"
         href="../../vendors/bootstrap/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../../css/styles.css"/>
+  <link rel="stylesheet" href="../../views/css/styles.css"/>
   <!--<script src="../../vendors/bootstrap/dist/js/bootstrap.min.js">-->
     <!--</script>-->
   <title>Title</title>
