--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>AngularFourMEANSeed</title>
-  <base href="/">
+  <!-- Meta tags for making website for mobile-->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="viewport" content="initial-scale=1.25, user-scalable=no">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+  <meta charset="UTF-8">
+  <title>Index</title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+  <!-- STYLE sheet comes after all the libraries are loaded. Document style-->
 </head>
 <body>
-  It works!!
-  <app-root></app-root>
+
+<h1>Assignment Home Page</h1>
+<div class="container">
+
+  <br> tests
+  <ul><a href="assets/index.html">                login.html                </a></ul>
+
+
+</div>
 </body>
 </html>
+
