--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-  <link href="./assets/vendors/styles.css" rel="stylesheet"/>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" onkeypress="" rel="stylesheet"/>
+  <link href="./assets/views/css/style.css" rel="stylesheet"/>
 
   <script
     src="https://code.jquery.com/jquery-3.3.1.js"
