--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
           <!--integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"-->
           <!--crossorigin="anonymous"></script>-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
   <!--<script-->
     <!--src="https://code.jquery.com/jquery-3.3.1.js"-->
